--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "eslint-config-prettier": "^6.5.0",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.16.0",
-    "prettier": "^1.18.2"
+    "prettier": "^1.18.2",
+    "react-loader-spinner": "^3.1.5",
+    "react-paginate": "^6.3.2"
   }
 }
