--- a/package.json
+++ b/package.json
@@ -37,11 +37,13 @@
     "@typescript-eslint/eslint-plugin": "^2.6.1",
     "@typescript-eslint/parser": "^2.6.1",
     "babel-eslint": "^10.0.3",
+    "bootstrap": "^4.4.1",
     "eslint": "^6.6.0",
     "eslint-config-prettier": "^6.5.0",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.16.0",
     "prettier": "^1.18.2",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-loader-spinner": "^3.1.5",
     "react-paginate": "^6.3.2"
   }
